# webpack-wasm-boilerplate

./: .eslintrc.json  .gitignore  README.md  package.json
config/: webpack.common.js
src/: index.js
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
